@@ -26,7 +26,9 @@ CronPartition::CronPartition(EventLoop &event_loop,
 	 queue(logger, event_loop, root_config.node_name.c_str(),
 		       config.database.c_str(), config.database_schema.c_str(),
 		       [this](CronJob &&job){ OnJob(std::move(job)); }),
-	 workplace(_spawn_service, email_service.get(), pond_socket,
+	 workplace(_spawn_service,
+		   email_service.get(), config.default_email_sender,
+		   pond_socket,
 		   *this,
 		   root_config.concurrency),
 	 idle_callback(_idle_callback),
