@@ -3,6 +3,7 @@ cm4all-workshop (6.0.28) unstable; urgency=low
   * cron: connect to database only if partition is enabled
   * cron: start multiple pending jobs at a time
   * cron: start the oldest job first
+  * cron: add setting "default_email_sender"
   * cron: verify the "notification" email address
 
  --   
